--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
@@ -11,7 +10,7 @@
 
   <groupId>com.pentaho</groupId>
   <artifactId>shim-bundle-plugin</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
   <packaging>maven-plugin</packaging>
 
   <name>maven-dependency-resolver-plugin Maven Plugin</name>
@@ -20,7 +19,7 @@
     <connection>scm:git:git@github.com:pentaho/pentaho-maven-plugins-ee.git</connection>
     <url>https://github.com/pentaho/pentaho-maven-plugins-ee</url>
     <developerConnection>scm:git:git@github.com:pentaho/pentaho-maven-plugins-ee.git</developerConnection>
-    <tag>HEAD</tag>
+    <tag>shim-bundle-plugin-1.0</tag>
   </scm>
 
   <distributionManagement>
