--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
   <groupId>com.pentaho</groupId>
   <artifactId>shim-bundle-plugin</artifactId>
-  <version>1.0</version>
+  <version>1.1-SNAPSHOT</version>
   <packaging>maven-plugin</packaging>
 
   <name>maven-dependency-resolver-plugin Maven Plugin</name>
@@ -19,7 +19,7 @@
     <connection>scm:git:git@github.com:pentaho/pentaho-maven-plugins-ee.git</connection>
     <url>https://github.com/pentaho/pentaho-maven-plugins-ee</url>
     <developerConnection>scm:git:git@github.com:pentaho/pentaho-maven-plugins-ee.git</developerConnection>
-    <tag>shim-bundle-plugin-1.0</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <distributionManagement>
